--- a/frontend/src/app/components/student-list-component/student-list-component.html
+++ b/frontend/src/app/components/student-list-component/student-list-component.html
@@ -1,9 +1,11 @@
 <p>student-list-component works!</p>
 
+
 <div *ngIf="students && students.length > 0">
 <table>
 <thead>
     <tr>
+        <th>Student ID</th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
@@ -13,6 +15,7 @@
         <th>Date of Birth</th>
         <th>Enrollment Date</th>
         <th>Status</th>
+        <th>Actions</th>
     </tr>
 </thead>
     <tr *ngFor="let student of students">
@@ -27,11 +30,11 @@
         <td>{{ student.studentEnrollmentDate }}</td>
         <td>{{ student.studentStatus }}</td>
         <td>
-          <button (click)="editStudent(student)">Edit</button>
-          
-          <button (click)="deleteStudent(student.studentId)">Delete</button>
+            <a [routerLink]="['/students/edit', student.studentId]">Edit</a>
+            <button (click)="deleteStudent(student.studentId)">Delete</button>
         </td>
     </tr>
+    
 </table>
 </div>
 
